<?xml version="1.0"?>
<package>
  <name>lar_youbot</name>
  <version>0.0.0</version>
  <description>LAR Youbot Package</description>

  <maintainer email="degregorio.daniele@gmail.com">daniele de gregorio</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>joy</run_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>trajectory_msgs</build_depend>  
  <build_depend>brics_actuator</build_depend>  
  <build_depend>actionlib</build_depend>  
  <build_depend>control_msgs</build_depend>  

  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib</run_depend>  
  <run_depend>control_msgs</run_depend> 
 <run_depend>trajectory_msgs</run_depend>  
  <run_depend>brics_actuator</run_depend> 


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
